MULTISITE-3928 remove unused images

--- a/sites/all/themes/ec_resp/css/less/feature-splash.less
+++ b/sites/all/themes/ec_resp/css/less/feature-splash.less
@@ -13,6 +13,6 @@ body.page-splash {
 }
 #logo {
   width: 100%;
-  height: 113px;
-  background: url('../images/eu-flag.gif') no-repeat top center;
+  height: 119px;
+  background: url('../images/logo/logo_en.gif') no-repeat top center;
 }
