--- a/sites/all/themes/ec_resp/css/less/menu.less
+++ b/sites/all/themes/ec_resp/css/less/menu.less
@@ -378,7 +378,7 @@ ul.nav-tabs {
 #block-cce-basic-config-footer-ipg .menu {
   li {
     display: inline;
-    padding: 3px 0;
+    padding: 0;
     &.first a {
       padding-left: 0;
       border: 0;
@@ -387,12 +387,12 @@ ul.nav-tabs {
   }
   a, 
   a:visited {
-    background: url("../images/services-separator.gif") transparent left center no-repeat;
     text-decoration: none;
     margin: 0;
-    padding: 0 0 3px 5px;
-    border: 0;
+    padding: 0 0 0 5px;
+    border-left: 1px solid #333;
     font-weight: normal;
+    line-height: 13px;
     display: inline-block;
   }
   a:focus, 
