--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -537,6 +537,7 @@ li.block-menu ul li ul li ul li ul li a{
 /* ---------------- Print/pdf  ----------------- */
 div#block-print-print-links {
   float: right;
+  z-index: 1;
   span {
     display: inline-block;
   }
