MULTISITE-4029 fix colorbox display

--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -679,6 +679,11 @@ tr.even, tr.odd {
   height: auto;
 }
 
+/* ---------------- Colorbox  ----------------- */
+#colorbox {
+  box-sizing: content-box;
+}
+
 /* ---------------- Tags cloud  ----------------- */
 #block-tagadelic-taxonomy-tagadelic-taxonomy {
   a.more,
