MULTISITE-4134 remove inline css

--- a/sites/all/themes/ec_resp/css/less/sidebar.less
+++ b/sites/all/themes/ec_resp/css/less/sidebar.less
@@ -20,3 +20,20 @@
 		padding-right: 6px;
 	}
 }
+
+#responsive-sidebar {
+	&.reduced {
+		left: -85%;
+	}
+	&.expanded {
+		left: 0;
+	}
+}
+#layout-body {
+	&.reduced {
+		left: 85%;
+	}
+	&.expanded {
+		left: 0;
+	}
+}
