MULTISITE-4179 improve configuration of colorbox

--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -682,6 +682,13 @@ tr.even, tr.odd {
 /* ---------------- Colorbox  ----------------- */
 #colorbox {
   box-sizing: content-box;
+  #cboxContent {
+    font-family: @font-family-base;
+    font-size: @font-size-base;
+    line-height: @line-height-base;
+    color: @text-color;
+    background-color: @body-bg;
+  }
 }
 
 /* ---------------- Tags cloud  ----------------- */
