--- a/sites/all/modules/custom/multisite_drupal_toolbox/icons/style.css
+++ b/sites/all/modules/custom/multisite_drupal_toolbox/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'multisite-icons';
-	src:url('fonts/multisite-icons.eot?5f3lf8');
-	src:url('fonts/multisite-icons.eot?#iefix5f3lf8') format('embedded-opentype'),
-		url('fonts/multisite-icons.woff?5f3lf8') format('woff'),
-		url('fonts/multisite-icons.ttf?5f3lf8') format('truetype'),
-		url('fonts/multisite-icons.svg?5f3lf8#multisite-icons') format('svg');
+	src:url('fonts/multisite-icons.eot?xbvdi0');
+	src:url('fonts/multisite-icons.eot?#iefixxbvdi0') format('embedded-opentype'),
+		url('fonts/multisite-icons.woff?xbvdi0') format('woff'),
+		url('fonts/multisite-icons.ttf?xbvdi0') format('truetype'),
+		url('fonts/multisite-icons.svg?xbvdi0#multisite-icons') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -37,6 +37,9 @@
 }
 .multisite-icon-volume:before {
 	content: "\e603";
+}
+.multisite-icon-history:before {
+	content: "\e607";
 }
 .multisite-icon-reorder:before {
 	content: "\f0ca";
