MULTISITE-4528 use $logo variable

--- a/sites/all/themes/ec_resp/css/less/feature-splash.less
+++ b/sites/all/themes/ec_resp/css/less/feature-splash.less
@@ -14,5 +14,5 @@ body.page-splash {
 #logo {
   width: 100%;
   height: 119px;
-  background: url('../images/logo/logo_en.gif') no-repeat top center;
+  background: url('../logo.png') no-repeat top center;
 }
