MULTISITE-4205 Cleanup user profile template

--- a/sites/all/themes/ec_resp/css/less/user.less
+++ b/sites/all/themes/ec_resp/css/less/user.less
@@ -15,6 +15,9 @@
   .no_label h3 {
     display: none;
   }
+  .field-label-inline .field-label {
+    width: 200px;
+  }
 }
 
 /* ---------------- user menu  ----------------- */
