MULTISITE-4842 : hack boostrap CSS for <input> of checkbox type

--- a/sites/all/themes/ec_resp/css/less/ec_resp.less
+++ b/sites/all/themes/ec_resp/css/less/ec_resp.less
@@ -92,3 +92,4 @@
 @import "feature-profiles.less"; // feature extended profiles
 
 @import "hack-ec.less"; // hack EC styles
+@import "hack-bootstrap.less"; // hack bootstrap
