MULTISITE-4917 Fix display of print_ui block

--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -535,7 +535,8 @@ li.block-menu ul li ul li ul li ul li a{
 }
 
 /* ---------------- Print/pdf  ----------------- */
-div#block-print-print-links {
+div#block-print-print-links,
+div#block-print-ui-print-links {
   float: right;
   z-index: 1;
   span {
