--- a/sites/all/libraries/fancybox/jquery.fancybox.css
+++ b/sites/all/libraries/fancybox/jquery.fancybox.css
@@ -1,8 +1,20 @@
-/*! fancyBox v2.0.6 fancyapps.com | fancyapps.com/fancybox/#license */
-.fancybox-tmp iframe, .fancybox-tmp object {
-	vertical-align: top;
+/*! fancyBox v2.1.5 fancyapps.com | fancyapps.com/fancybox/#license */
+.fancybox-wrap,
+.fancybox-skin,
+.fancybox-outer,
+.fancybox-inner,
+.fancybox-image,
+.fancybox-wrap iframe,
+.fancybox-wrap object,
+.fancybox-nav,
+.fancybox-nav span,
+.fancybox-tmp
+{
 	padding: 0;
 	margin: 0;
+	border: 0;
+	outline: none;
+	vertical-align: top;
 }
 
 .fancybox-wrap {
@@ -14,8 +26,6 @@
 
 .fancybox-skin {
 	position: relative;
-	padding: 0;
-	margin: 0;
 	background: #f9f9f9;
 	color: #444;
 	text-shadow: none;
@@ -35,10 +45,7 @@
 }
 
 .fancybox-outer, .fancybox-inner {
-	padding: 0;
-	margin: 0;
 	position: relative;
-	outline: none;
 }
 
 .fancybox-inner {
@@ -51,20 +58,16 @@
 
 .fancybox-error {
 	color: #444;
-  font-size: 14px;
-	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+	font: 14px/20px "Helvetica Neue",Helvetica,Arial,sans-serif;
 	margin: 0;
-	padding: 10px;
+	padding: 15px;
+	white-space: nowrap;
 }
 
 .fancybox-image, .fancybox-iframe {
 	display: block;
 	width: 100%;
 	height: 100%;
-	border: 0;
-	padding: 0;
-	margin: 0;
-	vertical-align: top;
 }
 
 .fancybox-image {
@@ -85,7 +88,7 @@
 	background-position: 0 -108px;
 	opacity: 0.8;
 	cursor: pointer;
-	z-index: 8020;
+	z-index: 8060;
 }
 
 #fancybox-loading div {
@@ -110,6 +113,7 @@
 	width: 40%;
 	height: 100%;
 	cursor: pointer;
+	text-decoration: none;
 	background: transparent url('blank.gif'); /* helps IE */
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	z-index: 8040;
@@ -135,12 +139,12 @@
 }
 
 .fancybox-prev span {
-	left: 20px;
+	left: 10px;
 	background-position: 0 -36px;
 }
 
 .fancybox-next span {
-	right: 20px;
+	right: 10px;
 	background-position: 0 -72px;
 }
 
@@ -150,38 +154,55 @@
 
 .fancybox-tmp {
 	position: absolute;
-	top: -9999px;
-	left: -9999px;
-	padding: 0;
-	overflow: visible;
+	top: -99999px;
+	left: -99999px;
 	visibility: hidden;
+	max-width: 99999px;
+	max-height: 99999px;
+	overflow: visible !important;
 }
 
 /* Overlay helper */
 
-#fancybox-overlay {
+.fancybox-lock {
+    overflow: hidden !important;
+    width: auto;
+}
+
+.fancybox-lock body {
+    overflow: hidden !important;
+}
+
+.fancybox-lock-test {
+    overflow-y: hidden !important;
+}
+
+.fancybox-overlay {
 	position: absolute;
 	top: 0;
 	left: 0;
 	overflow: hidden;
 	display: none;
 	z-index: 8010;
-	background: #000;
+	background: url('fancybox_overlay.png');
 }
 
-#fancybox-overlay.overlay-fixed {
+.fancybox-overlay-fixed {
 	position: fixed;
 	bottom: 0;
 	right: 0;
+}
+
+.fancybox-lock .fancybox-overlay {
+	overflow: auto;
+	overflow-y: scroll;
 }
 
 /* Title helper */
 
 .fancybox-title {
 	visibility: hidden;
-  font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-size:13px;
-  font-weight:normal;
+	font: normal 13px/20px "Helvetica Neue",Helvetica,Arial,sans-serif;
 	position: relative;
 	text-shadow: none;
 	z-index: 8050;
@@ -196,7 +217,7 @@
 	bottom: 0;
 	right: 50%;
 	margin-bottom: -35px;
-	z-index: 8030;
+	z-index: 8050;
 	text-align: center;
 }
 
@@ -223,7 +244,7 @@
 }
 
 .fancybox-title-inside-wrap {
-	margin-top: 10px;
+	padding-top: 10px;
 }
 
 .fancybox-title-over-wrap {
@@ -234,4 +255,20 @@
 	padding: 10px;
 	background: #000;
 	background: rgba(0, 0, 0, .8);
+}
+
+/*Retina graphics!*/
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
+	   only screen and (min--moz-device-pixel-ratio: 1.5),
+	   only screen and (min-device-pixel-ratio: 1.5){
+
+	#fancybox-loading, .fancybox-close, .fancybox-prev span, .fancybox-next span {
+		background-image: url('fancybox_sprite@2x.png');
+		background-size: 44px 152px; /*The size of the normal image, half the size of the hi-res image*/
+	}
+
+	#fancybox-loading div {
+		background-image: url('fancybox_loading@2x.gif');
+		background-size: 24px 24px; /*The size of the normal image, half the size of the hi-res image*/
+	}
 }
