MULTISITE-5138 Add module tagclouds

--- a/sites/all/themes/ec_resp/css/less/hack-bootstrap.less
+++ b/sites/all/themes/ec_resp/css/less/hack-bootstrap.less
@@ -4,3 +4,14 @@
 .checkbox-inline input[type="checkbox"] {
   margin-left: 0px;
 }
+
+.negate-list-group-item {
+  display: inline-block;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  &:hover {
+    text-decoration: underline;
+    background-color: transparent;
+  }
+}
