--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -693,6 +693,13 @@ tr.even, tr.odd {
 }
 
 /* ---------------- Tags cloud  ----------------- */
+.block-tagclouds {
+  a.list-group-item {
+    .negate-list-group-item;
+  }
+}
+
+/* deprecated */
 #block-tagadelic-taxonomy-tagadelic-taxonomy {
   a.more,
   a.more:visited,
