MULTISITE-5158 Fix responsive menu for mega menu

--- a/sites/all/themes/ec_resp/css/less/feature-megamenu.less
+++ b/sites/all/themes/ec_resp/css/less/feature-megamenu.less
@@ -91,3 +91,25 @@
     }
   }
 }
+
+@media (max-width: @screen-sm-max) {
+  .om-maximenu {
+    .navbar {
+      min-height: 0;
+      border: none;
+      margin-bottom: 0;
+    }
+    .navbar-collapse {
+      padding-left: 45px;
+      border: none;
+    }
+  }
+}
+
+@media (max-width: @screen-xs-max) {
+  .om-maximenu {
+    .navbar-collapse {
+      padding-left: 15px;
+    }
+  }
+}
