MULTISITE-5158 Fix responsive menu for mega menu

--- a/sites/all/themes/ec_resp/css/less/feature-megamenu.less
+++ b/sites/all/themes/ec_resp/css/less/feature-megamenu.less
@@ -2,6 +2,7 @@
 .om-maximenu.om-maximenu-block.om-maximenu-row {  
   .navbar {
     border-radius: 0;
+    margin: 0;
   }
   .affix {
     width: 100%;
@@ -97,7 +98,6 @@
     .navbar {
       min-height: 0;
       border: none;
-      margin-bottom: 0;
     }
     .navbar-collapse {
       padding-left: 45px;
