--- a/sites/all/themes/ec_resp/css/less/header.less
+++ b/sites/all/themes/ec_resp/css/less/header.less
@@ -116,9 +116,8 @@
 #path {
   font-size: 90%;
   background-color: #074A8B;
-  min-height: 18px;
+  height: 21px;
   color: #fff;
-  padding: 0 0 1px;
   overflow: hidden;
   line-height: 1.6;
   .menu-breadcrumb,
