MULTISITE-5498 Add "back to top" link

--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -552,6 +552,22 @@ tr.even, tr.odd {
   }
 }
 
+/* ---------------- Back on top link  ----------------- */
+.btn-back-top {
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: #fff;
+  font-size: 2em;
+  border-radius: @border-radius-base;
+  box-shadow: 0 1px 1px rgba(0,0,0,.05);
+  span.glyphicon {
+    padding: 8px 10px;
+  }
+}
+
 /* ---------------- Region content top  ----------------- */
 .region-content_top {
 
