--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -511,6 +511,9 @@ tr.even, tr.odd {
     line-height: @line-height-base;
     color: @text-color;
     background-color: @body-bg;
+    #cboxClose {
+      border: none;
+    }
   }
 }
 
