NEXTEUROPA-2578 Add default style

--- a/sites/all/themes/ec_resp/css/less/header.less
+++ b/sites/all/themes/ec_resp/css/less/header.less
@@ -240,6 +240,18 @@
   height:25px;
 }
 
+.lang-select-site__link {
+  display: block;
+  margin: -15px;
+  padding: 15px;
+}
+
+.lang-select-site__code {
+  .label;
+  .label-primary;
+  margin-right: 4px;
+}
+
 /* ------------------ Hack when js is enabled ------------------ */
 .js {
   #services, #block-menu-menu-service-tools .menu {
