NEXTEUROPA-2580 Add page level language switcher

--- a/sites/all/themes/ec_resp/css/less/node.less
+++ b/sites/all/themes/ec_resp/css/less/node.less
@@ -112,3 +112,23 @@
     margin-top: 5px;
   }
 }
+
+/* ------------------ Language switcher ------------------ */
+.lang-selector-page ol {
+  padding: 0;
+  margin: 0;
+}
+.lang-selector-page li {
+  list-style: none;
+  display: inline-block;
+  margin-left: 10px;
+}
+.lang-selector-page li:first-child {
+  margin-left: 0;
+}
+.lang-select-page__not-available {
+  text-decoration: line-through;
+}
+.lang-select-page__served {
+  font-weight: bold;
+}
