--- a/sites/all/modules/custom/version_management/version_management.css
+++ b/sites/all/modules/custom/version_management/version_management.css
@@ -21,9 +21,17 @@ input[type=checkbox].glyphicon{
 }
 */
 
-#edit-minor-version {
+.node-form .form-item-minor-version .form-checkbox {
   /*margin: 0px;*/
   margin-top: 10px;
+}
+
+#workbench-moderation-node-unpublish-form .form-checkbox {
+   margin-top: 4px;
+}
+
+#workbench-moderation-moderate-form .form-checkbox {
+   margin-top: 12px;
 }
 
 .major_version_mark_color {
